Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -71,23 +71,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'ART VANDELAY'"
+       "'art vandelay'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "name = \"art vandelay\" # \"ART VANDELAY\"\n",
-    "name.upper()"
+    "name.upper()\n",
+    "name.lower()"
    ]
   },
   {
