--- a/index.ipynb
+++ b/index.ipynb
@@ -177,22 +177,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function str.upper>"
+       "'CEO'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"Ceo\" # 'CEO'\n"
+    "\"Ceo\".upper() # 'CEO'\n"
    ]
   },
   {
